# aliases

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  VERSIONING.md  aliases-cli  aliases.code-workspace  autoexec.cfg  basic.ali.sh  build.sh  build_tests.sh  cleanup-old-install.sh  code.ali.sh  config.template.json  git.ali.sh  git_remote_commands.sh  install.sh  local-init-workspaces.sh  mappings.local.sh  mappings.template.json  mappings.template.sh  maven.ali.sh  npm.ali.sh  project-selection.ali.sh  pyproject.toml  run_tests.sh  setup.sh  test_install.sh  update-workspaces.ali.sh  vscode-debug.ali.sh
.github/: copilot-instructions.md  test-ci.md
.github/agents/: feature-dev.agent.md
.github/instructions/: cpp-conventions.instructions.md  new-command.instructions.md  python-conventions.instructions.md  testing.instructions.md
.github/skills/add-command/: SKILL.md
.github/skills/write-tests/: SKILL.md
.github/workflows/: README.md  ci-cd.yml  release.yml
aliases/: __init__.py  config.py  config_sync.py  git_operations.py  main.py  project_mapper.py  pwd_formatter.py
aliases/commands/: code_navigator.py  config_cmd.py  project_env.py  pwd_cmd.py  secrets_cmd.py  setup_cmd.py  update_cmd.py
aliases/data/: config.template.json
aliases/data/bash_aliases/: aws.ali.sh  basic.ali.sh  clear.ali.sh  git.ali.sh  maven.ali.sh  npm.ali.sh  rg.ali.sh
aliases/data/bash_completion/: aliases-completion.sh
aliases/data/shell/: fzf.sh  project-env.sh  prompt.sh  secrets.sh
aliases_cli/: __init__.py  config.py  config_sync.py  git_operations.py  main.py  process_utils.py  project_mapper.py  pwd_formatter.py
aliases_cli/commands/: code_navigator.py  config_cmd.py  project_env.py  secrets_cmd.py  setup_cmd.py  update_cmd.py
aliases_cli/data/bash_aliases/: basic.ali.sh  syncrotess.ali.sh
aliases_cli/data/bash_completion/: aliases-completion.sh
aliases_cli/data/shell/: project-env.sh  prompt.sh  secrets.sh
bash_aliases/: basic.ali.sh  clear.ali.sh  code.ali-deprecated.sh  git.ali.sh  maven.ali.sh  npm.ali.sh  project-selection.ali-deprecated.sh  syncrotess.ali.sh  todo.ali.sh  update-workspaces.ali-deprecated.sh
bash_completion/: aliases-completion.sh
bash_integration/: project-env.sh  prompt.sh  secrets.sh
docs/: README.md  RELEASE-CHECKLIST.md  VERSIONING-QUICK-START.md  VERSIONING.md
docs/development/: architecture.md  building.md  testing.md
docs/integrations/: bash-aliases.md  bash-integration.md
docs/reference/: commands.md  configuration.md
docs/user-guide/: config-sync.md  installation.md  todo-management.md
include/aliases/: common.h  config.h  config_loader.h  config_sync.h  file_utils.h  git_operations.h  process_utils.h  project_mapper.h  pwd_formatter.h  secrets_store.h
include/aliases/commands/: code_navigator.h  config_cmd.h  project_env.h  secrets_cmd.h  todo.h  todo_tui.h  workspace_updater.h
scripts/: bump-version.sh  create-release.sh
src/: main.cpp
src/commands/: code_navigator.cpp  config_cmd.cpp  project_env.cpp  secrets_cmd.cpp  todo.cpp  todo_tui.cpp  workspace_updater.cpp
src/core/: common.cpp  config.cpp  config_loader.cpp  config_sync.cpp  file_utils.cpp  git_operations.cpp  process_utils.cpp  project_mapper.cpp  pwd_formatter.cpp  secrets_store.cpp
tests/: __init__.py  conftest.py  test_cli_code.py  test_cli_completion.py  test_cli_config.py  test_cli_env.py  test_cli_pwd.py  test_cli_secrets.py  test_cli_update.py  test_config.py  test_project_mapper.py  test_pwd_formatter.py
tests/unit/: common_test.cpp  config_sync_test.cpp  config_test.cpp  file_utils_test.cpp  git_operations_test.cpp  process_utils_test.cpp  project_mapper_test.cpp  secrets_test.cpp  todo_test.cpp
