[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aliases-cli"
version = "2.2.1"
description = "Developer workspace management – project discovery, env setup, config sync, shell prompt"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["developer-tools", "workspace", "cli", "shell", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "keyring>=25.0",
    "rich>=13.7",
]

[project.optional-dependencies]
# Fallback keyring backend for headless / CI environments (no system keychain).
# Install with: uv tool install git+<url> --extra keyring-fallback
keyring-fallback = ["keyrings.alt>=4.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
aliases-cli = "aliases_cli.main:main"

[project.urls]
Repository = "https://github.com/bbauer0706/aliases"
Issues = "https://github.com/bbauer0706/aliases/issues"

[tool.hatch.build.targets.wheel]
packages = ["aliases_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.2.1"
version_files = [
    "pyproject.toml:version = \""
]
tag_format = "v$version"
update_changelog_on_bump = true
push = true
